small change made in view_home

--- a/html/view-home.html
+++ b/html/view-home.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="../css/view-home.css">
 </head>
 
-<body onload="document.body.classList.add('loaded')">
+<body onload="document.body.classList.add('loaded')" style = 'background-image: url("../images/mountains_sunset_flowers_123811_1920x1080.jpg");'>
 
     <nav class="navbar navbar-inverse">
         <div class="container-fluid">
