--- a/html/view-home.html
+++ b/html/view-home.html
@@ -14,7 +14,7 @@
 
 <body onload="document.body.classList.add('loaded')" style = 'background-image: url("../images/mountains_sunset_flowers_123811_1920x1080.jpg");'>
 
-    <nav class="navbar navbar-inverse">
+    <nav class="navbar navbar-inverse navbar-fixed-top">
         <div class="container-fluid">
             <div class="navbar-header">
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
@@ -41,7 +41,7 @@
         </div>
     </nav>
 
-    <div class="container">
+    <div class="container" style = "margin-top: 50px;">
         <div class="row row-header">
             <div class="col-md-6" style="display:block; border-radius: 4px; box-shadow: 0 4px 10px 4px rgba(19, 35, 47, .3);">
                 <p class="house-name"><?= $hname?></p>
