--- a/html/change-confirm.html
+++ b/html/change-confirm.html
@@ -23,7 +23,7 @@
     <div class="container" style="margin:100px auto">
         <div class="jumbotron text-xs-center"
             style="padding:80px; background-color: rgba(19, 35, 47, .9); box-shadow: 0 4px 10px 4px rgba(207, 225, 238, 0.3); text-align:center;">
-            <h1 class="display-3"><span style="color:white; font-weight: bold;">Your password has been updated!</span>
+            <h1 class="display-3"><span style="color:white; font-weight: bold;"><?php echo $text; ?></span>
             </h1>
             <a href="../php/homepage.php" style="text-decoration: none;">
                 <button class="btn btn-warning btn-lg" style="border-radius: 30px;">Continue to Homepage</button>
