small change made to view-home

--- a/html/view-home.html
+++ b/html/view-home.html
@@ -319,7 +319,9 @@
         </div>
     </div>
     <center>
-        <button class = 'btn btn-warning' type="button"><a href = '../php/search-homes.php' style = 'text-decoration : none; color: white;'>Click here to go back to search homes</a></button>
+        <div style = "margin-bottom: 10px;">
+        <button class = 'btn btn-warning' type="button" style = "padding :10px;"><a href = '../php/search-homes.php' style = 'text-decoration : none; color: white;'>Click here to go back to search homes</a></button>
+        </div>
     </center>
 
     <script>
