changed title of all the necessary pages

--- a/html/change.html
+++ b/html/change.html
@@ -1,7 +1,7 @@
 <html>
 
 <head>
-    <title>Signup for Brokfree</title>
+    <title>Change Password</title>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <link rel="stylesheet" href="../css/login.css" type="text/css">
