--- a/html/forgot_password.html
+++ b/html/forgot_password.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <title>Login to Brokfree</title>
+        <title>Forgot Password!</title>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
         <link rel="stylesheet" href="../css/login.css" type="text/css">
