--- a/html/login.html
+++ b/html/login.html
@@ -1,7 +1,7 @@
 <!--This is just a template of login page...-->
 <html>
 <head>
-    <title>Signup for Brokfree</title>
+    <title>Login to Brokfree</title>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <link rel="stylesheet" href="login.css" type="text/css">
