--- a/html/posting_error.html
+++ b/html/posting_error.html
@@ -2,6 +2,7 @@
 
 <head>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
+    <title>Posting Ads Error!</title>
 </head>
 <style>
     body {
