--- a/html/thank-you.html
+++ b/html/thank-you.html
@@ -1,6 +1,7 @@
 <html>
     <head>
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">        
+        <title>Thank you!</title>
     </head>
     <style>
         body {
