--- a/html/view-home.html
+++ b/html/view-home.html
@@ -26,7 +26,7 @@
             </div>
             <div class="collapse navbar-collapse" id="myNavbar">
                 <ul class="nav navbar-nav navbar-right">
-                    <li><a href="#aboutUs">About Us</a></li>
+                    <li><a href="../php/homepage.php#aboutUs">About Us</a></li>
                     <?php 
                     if(isset($_SESSION['user'])){?>
                     <li><a href="../php/view-profile.php"><span class='fas fa-user-circle' style = 'font-size:18px;'></span><?php echo " ".$_SESSION['user']?></a></li>
